Add responsive design measure for image and text box on 'Home' page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
         </div>
     </nav>
-
-    <div class="text-card bg">
+    <div class="page-elements">
+      <div class="text-card bg">
         <div class="card" style="border:0px">
             <div class="card-body text-card-bg">
               <h2 class="card-title text-card-font_title">Hi. I'm Brennan.</h2>
@@ -46,18 +46,24 @@
               <a href="#word" class="card-link">Read more</a>
             </div>
         </div>
-    </div>
+      </div>
 
-    <div class="image-card">
-          <div class="card image-card-bg" style="border:0px">
-            <div class="card-body image-card-txt_size">
-              <h5 class="card-title image-card-font_title">Featured Project</h5>
-              <h4 class="card-title image-card-font_subtitle">"Most Wanted"</h4>
-              <p class="card-text image-card-font_body">'Most Wanted' was written to be able to search people and their lineage based on their name or traits. It is written in Javascript and utilizes multiple JS scripts.  It also includes a recursive search algorithm.</p>
-              <a href="#word" class="card-link">Read more</a>
+      
+      <div class="image-card">
+            <div class="card image-card-bg" style="border:0px">
+              <div class="card-body image-card-txt_size">
+                <h5 class="card-title image-card-font_title">Featured Project</h5>
+                <h4 class="card-title image-card-font_subtitle">"Most Wanted"</h4>
+                <p class="card-text image-card-font_body">'Most Wanted' was written to be able to search people and their lineage based on their name or traits. It is written in Javascript and utilizes multiple JS scripts.  It also includes a recursive search algorithm.</p>
+                <a href="#word" class="card-link">Read more</a>
+              </div>
+              <img src="images/most-wanted-ref-img.PNG" class="card-img-bottom image-card-img_size image-card-img_border" alt="...">
             </div>
-            <img src="images/most-wanted-ref-img.PNG" class="card-img-bottom image-card-img_size image-card-img_border" alt="...">
-          </div>
+      </div>
+    </div>
+    <div style="text-align: right">
+      <img src="images/500x500ref.jpg" width="100" />
+      <img style="float: right; margin: 0px 15px 15px 0px;" src="images/500x500ref.jpg" width="100" />
     </div>
 
     <div class="word" id="word">
