--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <title>Brennan McCreary</title>
+    <title>Brennan McCreary - Home</title>
 </head>
 <body class="bg">
     <nav class="navbar navbar-expand-lg navbar-light nav-bg fixed-top">
@@ -21,13 +21,13 @@
                 <a class="nav-link nav-font active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item nav-padding-item">
-                <a class="nav-link nav-font" href="#word">About</a>
+                <a class="nav-link nav-font" href="./about.html">About</a>
                 </li>
                 <li class="nav-item nav-padding-item">
-                <a class="nav-link nav-font" href="#">Projects</a>
+                <a class="nav-link nav-font" href="./projects.html">Projects</a>
                 </li>
                 <li class="nav-item nav-padding-item">
-                <a class="nav-link nav-font" href="#">Contact</a>
+                <a class="nav-link nav-font" href="./contact.html">Contact</a>
                 </li>
             </ul>
             </div>
@@ -61,10 +61,10 @@
             </div>
       </div>
     </div>
-    <div style="text-align: right">
+    <!-- <div style="text-align: right">
       <img src="images/500x500ref.jpg" width="100" />
       <img style="float: right; margin: 0px 15px 15px 0px;" src="images/500x500ref.jpg" width="100" />
-    </div>
+    </div> -->
 
     <div class="word" id="word">
         Hello World
