Add main body section and images to 'About' page

--- a/about.html
+++ b/about.html
@@ -33,6 +33,32 @@
             </div>
         </div>
     </nav>
+
+    <section class="body-elements">
+        <div class="row">
+          <div class="page-elements col">
+            <div class="text-card bg">
+              <div class="card" style="border:0px">
+                  <div class="card-body text-card-bg">
+                    <h2 class="card-title text-card-font_title">Hi. I'm Brennan.</h2>
+                    <p class="card-text text-card-font_body">
+                      This is my portfolio site.  **Fill Out**
+                    </p>
+                    <a href="./about.html" class="card-link">Read more</a>
+                  </div>
+              </div>
+            </div>
+          </div> 
+          <div class="col image-block-left">
+            <div class="image-block-size">
+              <img src="./images/brennan-3.jpg" class="image-block-size_large image-card-img_border" alt="ref image">
+            </div>
+            <div class="image-block-left_bottom_overlap image-block-size">
+              <img src="./images/brennan-4.jpg" class="image-block-size_large image-card-img_border" alt="ref image">
+            </div>
+          </div>
+        </div> 
+      </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
