--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,28 @@
         </div>
     </nav>
     
+    <section class="body-elements">
+        <div class="contact-form">
+            <div class="row g-3" style="padding-bottom: 1rem;">
+                <div class="col">
+                    <label for="exampleFormControlInput1" class="contact-form-text form-label">First Name</label>
+                    <input type="text" class="form-control contact-form-text" placeholder="First name" aria-label="First name">
+                </div>
+                <div class="col">
+                    <label for="exampleFormControlInput1" class="contact-form-text form-label">Last Name</label>
+                    <input type="text" class="form-control contact-form-text" placeholder="Last name" aria-label="Last name">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="contact-form-text form-label">Email address</label>
+                <input type="email" class="form-control contact-form-text" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label contact-form-text">Message</label>
+                <textarea class="form-control contact-form-text" id="exampleFormControlTextarea1" rows="7"></textarea>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
