Add project thumbnails and descriptions to card.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class="card-text image-card-font_body">'Most Wanted' was written to be able to search people and their lineage based on their name or a combination of traits. It includes a recursive search algorithm and is written using Node.JS.</p>
                     <a href="./projects.html#featured" class="card-link">Read more</a>
                   </div>
-                  <img src="images/most-wanted-ref-img.PNG" class="card-img-bottom image-card-img_size image-card-img_border" alt="...">
+                  <img src="./images/project-thumbnails/most-wanted.PNG" class="card-img-bottom image-card-img_size image-card-img_border" alt="...">
                 </div>
           </div>
         </div> 
