Fill out 'about' information on home page and about page.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="card-body text-card-bg">
                   <h2 class="card-title text-card-font_title">Hi. I'm Brennan.</h2>
                   <p class="card-text text-card-font_body">
-                    This is my portfolio site.  **Fill Out**
+                    My name is Brennan McCreary and this is my portfolio site, so take a look around at what I am working on now and what I have completed in the past. I am a 21 year old, Pittsburgh-based, aspiring software developer.  I am currently enrolled in devCodeCamp's 'Full Stack Web Development' bootcamp.
                   </p>
                   <a href="./about.html" class="card-link">Read more</a>
                 </div>
